--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.454.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "shadcn-ui": "^0.9.2",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/add": "^2",
