token expiry check and redirect

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.509.0",
     "next": "14.2.13",
     "react": "^18",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/add": "^2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
