--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@jpisnice/shadcn-ui-mcp-server": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.21.3",
     "add": "^2.0.6",
     "alert": "^6.0.2",
     "class-variance-authority": "^0.7.0",
