--- a/package.json
+++ b/package.json
@@ -9,41 +9,65 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
+    "@headlessui/react": "^2.2.7",
+    "@hookform/resolvers": "^5.2.1",
     "@jpisnice/shadcn-ui-mcp-server": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@lexical/code": "^0.34.0",
+    "@lexical/history": "^0.34.0",
+    "@lexical/html": "^0.34.0",
+    "@lexical/link": "^0.34.0",
+    "@lexical/list": "^0.34.0",
+    "@lexical/markdown": "^0.34.0",
+    "@lexical/plain-text": "^0.34.0",
+    "@lexical/react": "^0.34.0",
+    "@lexical/rich-text": "^0.34.0",
+    "@lexical/selection": "^0.34.0",
+    "@lexical/table": "^0.34.0",
+    "@lexical/utils": "^0.34.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-icons": "^1.3.1",
-    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-table": "^8.21.3",
     "add": "^2.0.6",
-    "alert": "^6.0.2",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.509.0",
-    "next": "14.2.13",
+    "lexical": "^0.34.0",
+    "lucide-react": "^0.542.0",
+    "next": "^15.4.6",
+    "next-themes": "^0.4.6",
     "react": "^18",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^18",
-    "shadcn-ui": "^0.9.2",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "xlsx": "^0.18.5"
+    "react-hook-form": "^7.62.0",
+    "shadcn-ui": "^0.9.5",
+    "tailwind-merge": "^3.3.1",
+    "xlsx": "^0.18.5",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/add": "^2",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20",
+    "@types/node": "^24",
     "@types/react": "^18",
+    "@types/react-day-picker": "^5.3.0",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.7",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "shadcn": "^3.1.0",
     "typescript": "^5"
   },
   "packageManager": "yarn@4.5.0"
