debug cors error

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # Production Environment Variables
-NEXT_PUBLIC_API_BASE_URL=https://bookingsendpoint.onrender.com
+NEXT_PUBLIC_API_BASE_URL=https://bookingsendpoint-3r8k.onrender.com
 NEXT_PUBLIC_FRONTEND_URL=https://maniagobookings.vercel.app
 NEXT_PUBLIC_PAYSTACK_PUBLIC_KEY=pk_live_your_paystack_public_key_here
 NODE_ENV=production
